--- a/_source/LigaCancer/Views/ServiceType/Index.cshtml
+++ b/_source/LigaCancer/Views/ServiceType/Index.cshtml
@@ -57,7 +57,7 @@
 
                         <div class="card">
                             <div class="card-header">
-                                <span class="fa fa-notes-medical"></span> Serviços
+                                <span class="fa fa-id-card-clip"></span> Serviços
                             </div>
                             <div class="card-body">
                                 <div class="form-inline float-right">
