--- a/_source/LigaCancer/Views/Shared/_Layout.cshtml
+++ b/_source/LigaCancer/Views/Shared/_Layout.cshtml
@@ -104,8 +104,14 @@
                     </li>
 
                     <li class="nav-item">
+                        <a asp-action="Index" asp-controller="AuxiliarAccessoryType" class="nav-link">
+                            <span class="nav-icon fa fa-universal-access"></span> Tipos de Acessorios Auxiliares
+                        </a>
+                    </li>
+
+                    <li class="nav-item">
                         <a asp-action="Index" asp-controller="ServiceType" class="nav-link">
-                            <span class="nav-icon fa fa-notes-medical"></span> Tipos de Serviços
+                            <span class="nav-icon fa fa-id-card-clip"></span> Tipos de Serviços
                         </a>
                     </li>
 
