--- a/_source/LigaCancer/Views/Patient/Details.cshtml
+++ b/_source/LigaCancer/Views/Patient/Details.cshtml
@@ -324,6 +324,10 @@
                     </div>
 
                     <div class="col-12">
+                        <partial name="~/Views/PatientAuxiliarAccessoryType/Partials/_Index.cshtml" model="new PatientAuxiliarAccessoryTypeSearchModel(Model.PatientId)" />
+                    </div>
+
+                    <div class="col-12">
                         <partial name="~/Views/PatientBenefit/Partials/_Index.cshtml" />
                     </div>
 
