#682 creating migration again, fixing cruds and small changes

--- a/_source/LigaCancer/Views/Shared/_Layout.cshtml
+++ b/_source/LigaCancer/Views/Shared/_Layout.cshtml
@@ -54,17 +54,16 @@
                         </a>
                     </li>
 
-
                     <li class="nav-title">Atendimento</li>
                     <li class="nav-item">
-                        <a asp-action="Index" asp-controller="AttendanceType" class="nav-link">
-                            <span class="nav-icon fa fa-file-text"></span> Tipos de Atendimento
+                        <a asp-action="Index" asp-controller="VisitorAttendanceType" class="nav-link">
+                            <span class="nav-icon fa fa-user"></span> Atendimento
                         </a>
                     </li>
 
                     <li class="nav-item">
-                        <a asp-action="Index" asp-controller="VisitorAttendance" class="nav-link">
-                            <span class="nav-icon fa fa-user"></span> Atendimento
+                        <a asp-action="Index" asp-controller="AttendanceType" class="nav-link">
+                            <span class="nav-icon fa fa-file-text"></span> Tipos de Atendimento
                         </a>
                     </li>
 
