--- a/_source/LigaCancer/Views/VisitorAttendanceType/Partials/_AddVisitorAttendanceType.cshtml
+++ b/_source/LigaCancer/Views/VisitorAttendanceType/Partials/_AddVisitorAttendanceType.cshtml
@@ -1,6 +1,6 @@
 ﻿@model RVCC.Models.FormModel.VisitorAttendanceTypeFormModel
 
-<form id="addVisitorAttendanceForm" asp-action="AddVisitorAttendance" method="post">
+<form id="addVisitorAttendanceTypeForm" asp-action="AddVisitorAttendanceType" method="post">
 
     <div class="modal-body form-horizontal">
         <div class="form-group">
@@ -8,7 +8,7 @@
             <select asp-for="VisitorId" asp-items="Model.Visitors" class="select2 form-control"
                     data-theme="bootstrap"
                     data-language="pt-BR"
-                    data-placeholder="Paciente"
+                    data-placeholder="Visitante"
                     data-allow-clear="true">
                 <option value=""></option>
             </select>
@@ -26,16 +26,16 @@
             <select asp-for="Attendance" asp-items="Model.AttendanceTypes" class="select2 form-control"
                     data-theme="bootstrap"
                     data-language="pt-BR"
-                    data-placeholder="Benefícios"
+                    data-placeholder="Atendimentos"
                     data-allow-clear="true">
                 <option value=""></option>
             </select>
             <span asp-validation-for="Attendance" class="text-danger"></span>
         </div>
-        
+
         <div class="form-group">
-            <label asp-for="Observation" class="control-label label-required"></label>
-            <input asp-for="Observation" class="form-control" />
+            <label asp-for="Observation" class="control-label"></label>
+            <textarea asp-for="Observation" class="form-control" rows="5"></textarea>
             <span asp-validation-for="Observation" class="text-danger"></span>
         </div>
     </div>
