--- a/_source/LigaCancer/Views/Shared/_Layout.cshtml
+++ b/_source/LigaCancer/Views/Shared/_Layout.cshtml
@@ -170,7 +170,7 @@
     <footer class="app-footer">
         <div class="ml-auto">
             <span>Desenvolvido por</span>
-            <a href="https://doffs.com.br" target="_blank" rel="noopener">Doffs</a>
+            <a href="https://linkedin.com/in/felipe-pergher" target="_blank" rel="noopener">Felipe Pergher</a>
         </div>
     </footer>
 
