#705 added chart no home to show attendances by month and anually

--- a/_source/LigaCancer/Views/Home/Index.cshtml
+++ b/_source/LigaCancer/Views/Home/Index.cshtml
@@ -21,7 +21,7 @@
                     <div class="row">
                         <!-- /.col-->
                         <div class="col-sm-3">
-                            <h4 class="card-title mb-0">Presenças</h4>
+                            <h4 class="card-title mb-0">Atendimentos</h4>
                         </div>
                         <form class="col-sm-6 form-group row" id="searchForm" method="post">
                             <label class="col-md-3 mt-1" asp-for="ChartDate"></label>
@@ -32,9 +32,6 @@
                         </form>
                         <div class="col-sm-3 d-none d-md-block">
                             <div class="btn-group btn-group-toggle float-right mr-3" data-toggle="buttons">
-                                <label class="btn btn-outline-secondary">
-                                    <input id="day" type="radio" name="chartOptions" class="chartOptions" autocomplete="off"> Dia
-                                </label>
                                 <label class="btn btn-outline-secondary active">
                                     <input id="month" type="radio" name="chartOptions" class="chartOptions" autocomplete="off" checked> Mês
                                 </label>
