#708 Attendance feature added attendant and attendant crud to work as expected

--- a/_source/LigaCancer/Views/Shared/_Layout.cshtml
+++ b/_source/LigaCancer/Views/Shared/_Layout.cshtml
@@ -73,6 +73,12 @@
                         </a>
                     </li>
 
+                     <li class="nav-item">
+                        <a asp-action="Index" asp-controller="Attendant" class="nav-link">
+                            <span class="nav-icon fa fa-handshake"></span> Atendentes
+                        </a>
+                    </li>
+
                     <li class="nav-title">Benefícios</li>
                     <li class="nav-item">
                         <a asp-action="Index" asp-controller="PatientBenefit" class="nav-link">
