--- a/_source/LigaCancer/Views/Visitor/Index.cshtml
+++ b/_source/LigaCancer/Views/Visitor/Index.cshtml
@@ -73,7 +73,7 @@
                                     </a>
                                 </div>
 
-                                <table class="table table-bordered table-striped text-center" id="visitorTable" aria-describedby="Tabela de médicos"></table>
+                                <table class="table table-bordered table-striped text-center" id="visitorTable" aria-describedby="Tabela de visitantes"></table>
                             </div>
                         </div>
                     </div>
