--- a/_source/LigaCancer/Views/VisitorAttendanceType/Partials/_AddVisitorAttendanceType.cshtml
+++ b/_source/LigaCancer/Views/VisitorAttendanceType/Partials/_AddVisitorAttendanceType.cshtml
@@ -16,6 +16,18 @@
         </div>
 
         <div class="form-group">
+            <label asp-for="AttendantId" class="control-label label-required"></label>
+            <select asp-for="AttendantId" asp-items="Model.Attendants" class="select2 form-control"
+                    data-theme="bootstrap"
+                    data-language="pt-BR"
+                    data-placeholder="Atendente"
+                    data-allow-clear="true">
+                <option value=""></option>
+            </select>
+            <span asp-validation-for="AttendantId" class="text-danger"></span>
+        </div>
+
+        <div class="form-group">
             <label asp-for="Date" class="control-label label-required"></label>
             <input asp-for="Date" type="text" class="form-control" data-date-end-date="0d" />
             <span asp-validation-for="Date" class="text-danger"></span>
