--- a/_source/LigaCancer/Views/Home/Index.cshtml
+++ b/_source/LigaCancer/Views/Home/Index.cshtml
@@ -73,6 +73,16 @@
                        
                         <div class="col-sm-12 col-md mb-sm-2 mb-0">
                             <a asp-action="Index" asp-controller="VisitorAttendanceType" class="no-decoration">
+                                <div class="text-muted">Atendentes</div>
+                                <strong>@Model.AttendantCount</strong>
+                                <div class="progress progress-xs mt-2">
+                                    <div class="progress-bar bg-success" role="progressbar" style="width: 100%" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100"></div>
+                                </div>
+                            </a>
+                        </div>
+
+                        <div class="col-sm-12 col-md mb-sm-2 mb-0">
+                            <a asp-action="Index" asp-controller="VisitorAttendanceType" class="no-decoration">
                                 <div class="text-muted">Atendimentos</div>
                                 <strong>@Model.VisitorAttendanceTypeCount</strong>
                                 <div class="progress progress-xs mt-2">
