--- a/_source/LigaCancer/Views/Shared/_Layout.cshtml
+++ b/_source/LigaCancer/Views/Shared/_Layout.cshtml
@@ -130,6 +130,12 @@
                     </li>
 
                     <li class="nav-item">
+                        <a asp-action="Index" asp-controller="TreatmentType" class="nav-link">
+                            <span class="nav-icon fa fa-x-ray"></span> Tipos de Tratamentos
+                        </a>
+                    </li>
+
+                    <li class="nav-item">
                         <a asp-action="Index" asp-controller="AuxiliarAccessoryType" class="nav-link">
                             <span class="nav-icon fa fa-universal-access"></span> Tipos de Acessorios Auxiliares
                         </a>
