--- a/_source/LigaCancer/Views/Patient/Index.cshtml
+++ b/_source/LigaCancer/Views/Patient/Index.cshtml
@@ -192,6 +192,19 @@
                                                     <option value=""></option>
                                                 </select>
                                             </div>
+
+                                            <div class="col-lg-3">
+                                                <label asp-for="PatientTreatmentTypes"></label>
+                                                <select asp-for="PatientTreatmentTypes" class="form-control filterSelect" style="width: 100%"
+                                                        data-theme="bootstrap"
+                                                        data-width="resolve"
+                                                        data-language="pt-BR"
+                                                        data-ajax--url="/api/TreatmentType/select2Get"
+                                                        data-ajax--data-type="json"
+                                                        data-placeholder="Tratamentos">
+                                                    <option value=""></option>
+                                                </select>
+                                            </div>
                                         </div>
 
                                         <button type="reset" class="btn btn-secondary">
